[package]
name = "spoti-dl"
version = "2.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# * configuring for setuptools-rs
[lib]
name = "spotidl"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module", "abi3-py38", "generate-import-lib"] }
pyo3-asyncio = { version = "0.19", features = ["tokio-runtime"] }
tokio = "1"
rspotify = {version = "0.13.2", features = ["client-reqwest", "reqwest-native-tls", "cli"], default-features = false} 
chrono = "0.4"
youtube_dl = {version="0.9", features = ["tokio"]}
lofty = "0.16.0"
reqwest = {version="0.12.4", features=["rustls-tls", "json"], default-features = false}
async-fs = "1.6.0"
regex = "1.9"
lazy_static = "1.4.0"
pyo3-log = "*"
log = "0.4.20"
colored = "2"